<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/constraint_layout"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            tools:text="@string/box_one" android:id="@+id/box_one_text" style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            tools:text="@string/box_two" style="@style/whiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text" style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text" android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/box_one_text"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text" style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text" style="@style/whiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toBottomOf="@+id/box_two_text"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:id="@+id/label_text" android:fontFamily="@font/roboto"
            android:textSize="24sp" android:textStyle="bold" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/info_text"/>
    <TextView
            android:text="@string/tap_the_boxes_and_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto" android:id="@+id/info_text"
            app:layout_constraintStart_toEndOf="@+id/label_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_two_text" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button" app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/green_button"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/info_text" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="273dp" app:srcCompat="@drawable/retry"
            android:id="@+id/retry" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/label_text" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/yellow_button" android:contentDescription="@string/retryy"
            android:onClick="makeColored"/>

</android.support.constraint.ConstraintLayout>